Added 100% tests